--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT = 5001
 CONNECTION_STRING = mongodb+srv://karnamajay123:Karnamdb1@ajaycluster.4hxuw.mongodb.net/mycontacts-backend?retryWrites=true&w=majority&appName=AjayCluster
+ACCESS_TOKEN_SECRET = ajay@123
